-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17
-
Component/s: hotspot
-
b07
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8302617 | 17.0.8-oracle | Calvin Cheung | P3 | Resolved | Fixed | b01 |
| JDK-8301827 | 17.0.7 | Thomas Stuefe | P3 | Resolved | Fixed | b01 |
Failed to compile if a test has lots of function blocks if running on JDK 17, but JDK 8 works.
REGRESSION : Last worked in version 8
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
export JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk-17.jdk/Contents/Home
export PATH=${JAVA_HOME}/bin:${PATH}
git clone https://github.com/delta-io/delta.git
cd delta
git checkout 6a30e958de4322100b2ccfa13fa29ae155369a07
build/sbt clean "core/testOnly *.DeltaErrorsSuite"
ACTUAL -
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (metaspaceArena.cpp:93), pid=45644, tid=6147
# guarantee(requested_word_size <= chunklevel::MAX_CHUNK_WORD_SIZE) failed: Requested size too large (528698) - max allowed size per allocation is 524288.
#
# JRE version: Java(TM) SE Runtime Environment (17.0+35) (build 17+35-LTS-2724)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (17+35-LTS-2724, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-amd64)
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /Users/yumwang/opensource/delta/core/hs_err_pid45644.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
Exception in thread "Thread-9" java.io.EOFException
| => cat java.base/java.io.ObjectInputStream$BlockDataInputStream.peekByte(ObjectInputStream.java:3192)
at java.base/java.io.ObjectInputStream.readObject0(ObjectInputStream.java:1693)
at java.base/java.io.ObjectInputStream.readObject(ObjectInputStream.java:514)
at java.base/java.io.ObjectInputStream.readObject(ObjectInputStream.java:472)
at org.scalatest.tools.Framework$ScalaTestRunner$Skeleton$1$React.react(Framework.scala:839)
at org.scalatest.tools.Framework$ScalaTestRunner$Skeleton$1.run(Framework.scala:828)
at java.base/java.lang.Thread.run(Thread.java:833)
---------- BEGIN SOURCE ----------
https://github.com/delta-io/delta/blob/2499f5408c63de39914a789cf8bb57137224fb3a/core/src/test/scala/org/apache/spark/sql/delta/DeltaErrorsSuite.scala#L146
---------- END SOURCE ----------
CUSTOMER SUBMITTED WORKAROUND :
https://github.com/delta-io/delta/pull/1391/files#diff-7fb91cd0f8dfcccf78ab6ff32c97945a15df962a6572f6236575addc3067d824R146
FREQUENCY : always
- backported by
-
JDK-8301827 chunklevel::MAX_CHUNK_WORD_SIZE too small for some applications
-
- Resolved
-
-
JDK-8302617 chunklevel::MAX_CHUNK_WORD_SIZE too small for some applications
-
- Resolved
-
- relates to
-
JDK-8300729 Humongous Metaspace allocations
-
- Closed
-
-
JDK-8251158 Implementation of JEP 387: Elastic Metaspace
-
- Resolved
-
-
JDK-8301786 [Lilliput] Failing CompressedClassPointerEncoding.java
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/ddd9631f
-
Commit
openjdk/jdk/2292ce13
-
Review
openjdk/jdk17u-dev/1142
-
Review
openjdk/jdk/12115