8294677: chunklevel::MAX_CHUNK_WORD_SIZE too small for some applications

Reviewed-by: phh, xliu
Backport-of: 2292ce137c16accf0622600d5a096403b8a8058d